--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,48 @@
-body{
+body {
   font-family: Georgia;
+}
+
+.imgfix {
+  width: 100%;
+  height: auto;
+}
+
+#animateimg {
+  animation: up-down 2s ease-in-out infinite alternate-reverse both;
+}
+
+.menu_active {
+  display: block;
+  padding: .5rem 1rem;
+  font-weight: bold;
+  text-decoration: none;
+  color: #F53803;
+}
+
+.menu_active:hover {
+  color: #F53803;
+}
+
+.nav-link {
+  color: black !important;
+}
+
+@-webkit-keyframes up-down {
+  0% {
+    transform: translateY(10px);
+  }
+
+  100% {
+    transform: translateY(-10px);
+  }
+}
+
+@keyframes up-down {
+  0% {
+    transform: translateY(10px);
+  }
+
+  100% {
+    transform: translateY(-10px);
+  }
 }
