--- a/src/App.css
+++ b/src/App.css
@@ -29,7 +29,14 @@ a:hover {
   display: table-cell;
   vertical-align: middle;
 }
-
+.btn{
+  border: 1px solid #F53803;
+}
+.btn:hover{
+  background-color: #F53803;
+  border-color: #F53803;
+  color: white;
+}
 .inner {
   margin-left: auto;
   margin-right: auto;
