--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,6 @@
+@import url('https://fonts.googleapis.com/css2?family=Sansita&display=swap');
 body {
-  font-family: 'Times New Roman', Times, serif;
+  font-family: 'Sansita', sans-serif;
   overflow-x: hidden;
 }
 
