--- a/src/App.css
+++ b/src/App.css
@@ -13,7 +13,10 @@ a {
   text-decoration: none;
   color: gray;
 }
-
+.dropdown:hover .dropdown-menu {
+  display: block;
+  margin-top:0;
+}
 a:hover {
   text-decoration: none;
   color: gray;
