--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,6 @@
-@import url("https://fonts.googleapis.com/css2?family=Sansita&display=swap");
+/* @import url("https://fonts.googleapis.com/css2?family=Sansita&display=swap"); */
 @import url("https://fonts.googleapis.com/css2?family=Itim&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Rubik&display=swap");
+/* @import url("https://fonts.googleapis.com/css2?family=Rubik&display=swap"); */
 
 body {
   /* font-family: 'Sansita', sans-serif; */
@@ -10,6 +10,16 @@ body {
   background: radial-gradient(circle at 10% 20%,
       rgba(216, 241, 230, 0.46) 0.1%,
       rgba(233, 226, 226, 0.28) 90.1%);
+}
+
+section {
+  padding-top: 30px !important;
+}
+
+input,
+textarea,
+select {
+  background: transparent !important;
 }
 
 span {
@@ -367,16 +377,15 @@ a:hover {
 
 /* Dashboard */
 #dashboard-sidebar {
-  text-align: justify !important;
-  /* padding: 30px !important; */
+  text-align: center !important;
   font-size: 25px !important;
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 962px) {
   #dashboard-sidebar {
     text-align: center !important;
     padding: 0px !important;
-    font-size: 25px !important;
+    font-size: 18px !important;
   }
 
   .navbar {
@@ -393,7 +402,6 @@ a:hover {
   -moz-box-shadow: 0px 7px 10px -2px rgba(245, 56, 3, 1);
   box-shadow: 0px 7px 10px -2px rgba(245, 56, 3, 1);
 }
-
 
 .imgfix {
   width: 100%;
