--- a/src/App.css
+++ b/src/App.css
@@ -77,6 +77,31 @@ span {
   min-height: 40px;
 }
 
+/* Take Notes */
+#customboxcss {
+  min-height: 100vh;
+  -webkit-box-shadow: 0px 3px 31px -6px rgba(245, 56, 3, 1);
+  -moz-box-shadow: 0px 3px 31px -6px rgba(245, 56, 3, 1);
+  box-shadow: 0px 3px 31px -6px rgba(245, 56, 3, 1);
+  border-radius: 5px !important;
+}
+
+.ql-toolbar {
+  width: 100%;
+  background-color: lightgrey;
+  border-radius: 5px;
+  position: sticky;
+  top: 0;
+  z-index: 1;
+}
+
+.ql-editor {
+  width: 100%;
+  min-height: 100vh;
+  background-color: white;
+  border-radius: 5px;
+}
+
 #privacypolicy {
   text-align: justify;
 }
