--- a/src/App.css
+++ b/src/App.css
@@ -78,28 +78,17 @@ span {
 }
 
 /* Take Notes */
-#customboxcss {
-  min-height: 100vh;
-  -webkit-box-shadow: 0px 3px 31px -6px rgba(245, 56, 3, 1);
-  -moz-box-shadow: 0px 3px 31px -6px rgba(245, 56, 3, 1);
-  box-shadow: 0px 3px 31px -6px rgba(245, 56, 3, 1);
-  border-radius: 5px !important;
-}
-
-.ql-toolbar {
+#TakeNotesCss {
+  background: linear-gradient(to left bottom, var(--g-color1), var(--g-color2));
+  color: white;
+  border: 1px solid wheat;
+  border-radius: 10px;
+  padding: 10px;
+  margin: 10px;
   width: 100%;
-  background-color: lightgrey;
-  border-radius: 5px;
-  position: sticky;
-  top: 0;
-  z-index: 1;
-}
-
-.ql-editor {
-  width: 100%;
-  min-height: 100vh;
-  background-color: white;
-  border-radius: 5px;
+  max-width: fit-content;
+  height: auto;
+  min-height: 40px;
 }
 
 #privacypolicy {
