Fixed Quiz Error

--- a/src/App.css
+++ b/src/App.css
@@ -37,8 +37,8 @@ span {
   max-width: fit-content;
   height: auto;
 }
-.h2bg
-{
+
+.h2bg {
   background: linear-gradient(-225deg, #FF057C 0%, #8D0B93 50%, #321575 100%);
   color: white;
   border-radius: 10px;
@@ -50,8 +50,8 @@ span {
   text-align: center;
   cursor: default;
 }
-#btncolourfix button
-{
+
+#btncolourfix button {
   background: linear-gradient(110.7deg, rgb(9, 154, 151) 6.3%, rgb(21, 205, 168) 90.6%);
   color: white;
   border-radius: 10px;
@@ -112,6 +112,11 @@ span {
   max-width: fit-content;
   height: auto;
   min-height: 40px;
+}
+
+/* Dashboard Footer */
+#DashboardFooter {
+  cursor: default;
 }
 
 /* Take Notes */
