--- a/ScientificCalculator/css/calclayout.css
+++ b/ScientificCalculator/css/calclayout.css
@@ -4,7 +4,6 @@
     -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
 }
-
 body {
     font-family: "Itim", cursive;
     font-weight: bold;
@@ -363,6 +362,7 @@ body {
     margin-right: 6px;
     overflow: auto;
     padding: 10px;
+    text-align: left;
 }
 
 #helptopDiv {
@@ -371,6 +371,7 @@ body {
     /* background-color: #4286f3; */
     color: #ffffff;
     /* cursor: move; */
+    text-align: left;
 }
 
 #keyPad_Help,
