--- a/src/App.css
+++ b/src/App.css
@@ -12,6 +12,27 @@ body {
       rgba(233, 226, 226, 0.28) 90.1%);
 }
 
+.activenote {
+  border-radius: 10px;
+  -webkit-box-shadow: 0px 7px 23px 12px rgba(0, 0, 0, 0.75);
+  -moz-box-shadow: 0px 7px 23px 12px rgba(0, 0, 0, 0.75);
+  box-shadow: 0px 7px 23px 12px rgba(0, 0, 0, 0.75);
+  padding: 20px;
+  margin-bottom: 10px;
+}
+.inactivenote
+{
+  background: wheat;
+  padding: 10px;
+  padding-left: 20px;
+  border-radius: 10px;
+  margin-bottom: 10px;
+}
+#addcursor
+{
+  cursor: pointer;
+}
+
 section {
   padding-top: 30px !important;
 }
@@ -128,6 +149,19 @@ div.goog-te-gadget {
   background-color: red;
   color: white;
   border: 1px solid red;
+  border-radius: 10px;
+  padding: 10px;
+  margin: 10px;
+  width: 100%;
+  max-width: fit-content;
+  height: auto;
+}
+
+.btnyellow
+{
+  background-color: orange;
+  color: white;
+  border: 1px solid orange;
   border-radius: 10px;
   padding: 10px;
   margin: 10px;
