--- a/src/App.css
+++ b/src/App.css
@@ -19,6 +19,8 @@ body {
   box-shadow: 0px 7px 23px 12px rgba(0, 0, 0, 0.75);
   padding: 20px;
   margin-bottom: 10px;
+  overflow: hidden!important;
+  width: 100%;
 }
 .inactivenote
 {
@@ -27,6 +29,8 @@ body {
   padding-left: 20px;
   border-radius: 10px;
   margin-bottom: 10px;
+  width: 100%;
+  overflow: hidden;
 }
 #addcursor
 {
