--- a/src/App.css
+++ b/src/App.css
@@ -271,6 +271,11 @@ div.goog-te-gadget {
   width: 100%;
   height: auto;
 }
+.note img
+{
+  width: 100%;
+  height: auto;
+}
 
 #TakeNotesCss input,
 textarea {
